--- a/app/views/index.html
+++ b/app/views/index.html
@@ -18,7 +18,16 @@
         Wagtail frontend test
       </h1>
 
-      <h2 class="nhsuk-heading-m">Behind the headlines</h2>
+    </div>
+  </div>
+
+  <div class="nhsuk-grid-row">
+
+      <div class="nhsuk-grid-column-one-half">
+
+      <h2>Wagtail pages</h2>
+
+      <h3>Behind the headlines</h3>
 
       <ul>
         <li>
@@ -32,7 +41,7 @@
         </li>
       </ul>
 
-      <h2 class="nhsuk-heading-m">Common health questions</h2>
+      <h3>Common health questions</h3>
       
       <ul>
         <li>
@@ -43,6 +52,24 @@
         </li>
         <li>
           <a href="/pages/common_health_questions/CHQ_Question_Page__desktop">CHQ_Question_Page__desktop</a>
+        </li>
+      </ul>
+
+    </div>
+    
+    <div class="nhsuk-grid-column-one-half">
+
+      <h2>Layouts</h2>
+
+      <ul>
+        <li>
+          <a href="/layouts/layout-nhsuk-full-width">Full width</a>
+        </li>
+        <li>
+          <a href="/layouts/layout-nhsuk-two-columns-right">Two columns right</a>
+        </li>
+        <li>
+          <a href="/layouts/layout-nhsuk-two-columns-left">Two columns left</a>
         </li>
       </ul>
 
