--- a/app/views/pages/common_health_questions/CHQ_Section_HomePage__desktop.html
+++ b/app/views/pages/common_health_questions/CHQ_Section_HomePage__desktop.html
@@ -25,11 +25,11 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
        
-      <h2>Select a topic:</h2>
+      <h2 class="nhsuk-heading-m">Select a topic:</h2>
 
       <ul class="nhsuk-contents-list__list">
           
-        <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/accidents-first-aid-and-treatments/">Accidents, first aid and treatments</a></li>
+        <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/pages/common_health_questions/CHQ_Topic_Page__desktop">Accidents, first aid and treatments</a></li>
     
         <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/caring-carers-and-long-term-conditions/">Caring, carers and long-term conditions</a></li>
     
