--- a/app/views/pages/common_health_questions/CHQ_Topic_Page__desktop.html
+++ b/app/views/pages/common_health_questions/CHQ_Topic_Page__desktop.html
@@ -165,6 +165,11 @@
     
       </ul>
 
+      {{ backLink({
+        "href": "/pages/common_health_questions/CHQ_Section_HomePage__desktop",
+        "text": "Back to Topics"
+      }) }}
+
     </div>  
 
   </div>
