--- a/docs/views/layouts/layout.html
+++ b/docs/views/layouts/layout.html
@@ -48,7 +48,7 @@
 
 <!-- Set the page title inside this block -->
 {% block pageTitle %}
-  NHS.UK prototype kit
+  Wagtail frontend test
 {% endblock %}
 
 <!-- Header goes inside this block -->
