--- a/app/views/pages/behind_the_headlines/Behind_the_Headlines_Category_Page.html
+++ b/app/views/pages/behind_the_headlines/Behind_the_Headlines_Category_Page.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/layout-nhsuk-two-columns-left.html' %}
+{% extends 'layouts/layout-nhsuk-two-columns-right.html' %}
 
 {% block pageTitle %}
   Behind_the_Headlines_Category_Page
@@ -23,18 +23,11 @@
     Diabetes news
   </h1>
 
-  <p class="nhsuk-body-l">Your guide to the diabetes science that makes the news.</p>
+  <p class="nhsuk-lede-text">Your guide to the diabetes science that makes the news.</p>
 
 {% endblock %}
 
 {% block content_one_third %}
-
-  <h2 class="nhsuk-heading-xs nhsuk-u-margin-bottom-2">Sort by</h2>
-
-  <ul class="nhsuk-u-margin-bottom-6">          
-    <li>Newest first</li>
-    <li><a href="#">Oldest first</a></li>
-  </ul>
 
 {% endblock %}
 
