--- a/app/views/pages/behind_the_headlines/Behind_the_Headlines_Section_HomePage-2.html
+++ b/app/views/pages/behind_the_headlines/Behind_the_Headlines_Section_HomePage-2.html
@@ -21,7 +21,7 @@
           Behind the Headlines
         </h1>
 
-        <p>Your guide to the science that makes the news.</p>
+        <p class="nhsuk-lede-text">Your guide to the science that makes the news.</p>
 
       </div>
 
