--- a/app/views/pages/behind_the_headlines/Behind_the_Headlines_Section_HomePage.html
+++ b/app/views/pages/behind_the_headlines/Behind_the_Headlines_Section_HomePage.html
@@ -19,7 +19,7 @@
           Behind the Headlines
         </h1>
 
-        <p class="nhsuk-body-l">Your guide to the science that makes the news.</p>
+        <p class="nhsuk-lede-text">Your guide to the science that makes the news.</p>
 
     </div>
   </div>
