--- a/app/views/layouts/layout-nhsuk-two-columns-right.html
+++ b/app/views/layouts/layout-nhsuk-two-columns-right.html
@@ -19,17 +19,19 @@
 
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
+      <article>
 
-      {% block content_two_thirds %}
-      
-        <div class="layout-example">
-
-          Two thirds
-          
-        </div>
+        {% block content_two_thirds %}
         
-      {% endblock %}
+          <div class="layout-example">
 
+            Two thirds
+            
+          </div>
+          
+        {% endblock %}
+
+      </article>
     </div>  
 
     <div class="nhsuk-grid-column-one-third">
