--- a/app/views/layouts/layout-nhsuk-two-columns-left.html
+++ b/app/views/layouts/layout-nhsuk-two-columns-left.html
@@ -33,17 +33,19 @@
     </div>
 
     <div class="nhsuk-grid-column-two-thirds">
+      <article>
 
-      {% block content_two_thirds %}
-      
-        <div class="layout-example">
-
-          Two thirds
-          
-        </div>
+        {% block content_two_thirds %}
         
-      {% endblock %}
+          <div class="layout-example">
 
+            Two thirds
+            
+          </div>
+          
+        {% endblock %}
+
+      </article>
     </div>  
   </div>
 {% endblock %}
