--- a/app/views/pages/behind_the_headlines/Behind_the_Headlines_Section_HomePage.html
+++ b/app/views/pages/behind_the_headlines/Behind_the_Headlines_Section_HomePage.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/layout-nhsuk.html' %}
+{% extends 'layouts/layout-nhsuk-two-columns-left.html' %}
 
 {% block pageTitle %}
   Behind_the_Headlines_Section_HomePage
@@ -11,202 +11,199 @@
   }) }}
 {% endblock %}
 
-{% block content %}
-  <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-two-thirds">
+{% block content_page_heading %}
 
-        <h1>
-          Behind the Headlines
-        </h1>
+  <h1>
+    Behind the Headlines
+  </h1>
 
-        <p class="nhsuk-lede-text">Your guide to the science that makes the news.</p>
+  <p class="nhsuk-lede-text">Your guide to the science that makes the news.</p>
 
-    </div>
-  </div>
+{% endblock %} 
 
-  <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-one-third">
-      <h2 class="nhsuk-heading-xs nhsuk-u-margin-bottom-3">Categories</h2>
-      <ul class="nhsuk-u-margin-bottom-6">          
-          <li><a href="/pages/behind_the_headlines/Behind_the_Headlines_Category_Page">Cancer</a></li>
-          
-          <li><a href="/pages/behind_the_headlines/Behind_the_Headlines_Category_Page">Genetics and stem cells</a></li>
-          
-          <li><a href="/pages/behind_the_headlines/Behind_the_Headlines_Category_Page">Food and diet</a></li>
-          
-          <li><a href="/pages/behind_the_headlines/Behind_the_Headlines_Category_Page">Obesity</a></li>
-          
-          <li><a href="/pages/behind_the_headlines/Behind_the_Headlines_Category_Page">Neurology</a></li>
-          
-          <li><a href="/pages/behind_the_headlines/Behind_the_Headlines_Category_Page">Lifestyle and exercise</a></li>
-          
-          <li><a href="/pages/behind_the_headlines/Behind_the_Headlines_Category_Page">Older people</a></li>
-          
-          <li><a href="/pages/behind_the_headlines/Behind_the_Headlines_Category_Page">Heart and lungs</a></li>
-          
-          <li><a href="/pages/behind_the_headlines/Behind_the_Headlines_Category_Page">Medication</a></li>
-          
-          <li><a href="/pages/behind_the_headlines/Behind_the_Headlines_Category_Page">Pregnancy and child</a></li>
-          
-          <li><a href="/pages/behind_the_headlines/Behind_the_Headlines_Category_Page">Mental health</a></li>
-          
-          <li><a href="/pages/behind_the_headlines/Behind_the_Headlines_Category_Page">Medical practice</a></li>
-          
-          <li><a href="/pages/behind_the_headlines/Behind_the_Headlines_Category_Page">Diabetes</a></li>       
-      </ul>
-    </div>
+{% block content_one_third %}
 
-    <div class="nhsuk-grid-column-two-thirds">
+<h2 class="nhsuk-heading-xs nhsuk-u-margin-bottom-3">Categories</h2>
+  <ul class="nhsuk-u-margin-bottom-6">          
+      <li><a href="/pages/behind_the_headlines/Behind_the_Headlines_Category_Page">Cancer</a></li>
+      
+      <li><a href="/pages/behind_the_headlines/Behind_the_Headlines_Category_Page">Genetics and stem cells</a></li>
+      
+      <li><a href="/pages/behind_the_headlines/Behind_the_Headlines_Category_Page">Food and diet</a></li>
+      
+      <li><a href="/pages/behind_the_headlines/Behind_the_Headlines_Category_Page">Obesity</a></li>
+      
+      <li><a href="/pages/behind_the_headlines/Behind_the_Headlines_Category_Page">Neurology</a></li>
+      
+      <li><a href="/pages/behind_the_headlines/Behind_the_Headlines_Category_Page">Lifestyle and exercise</a></li>
+      
+      <li><a href="/pages/behind_the_headlines/Behind_the_Headlines_Category_Page">Older people</a></li>
+      
+      <li><a href="/pages/behind_the_headlines/Behind_the_Headlines_Category_Page">Heart and lungs</a></li>
+      
+      <li><a href="/pages/behind_the_headlines/Behind_the_Headlines_Category_Page">Medication</a></li>
+      
+      <li><a href="/pages/behind_the_headlines/Behind_the_Headlines_Category_Page">Pregnancy and child</a></li>
+      
+      <li><a href="/pages/behind_the_headlines/Behind_the_Headlines_Category_Page">Mental health</a></li>
+      
+      <li><a href="/pages/behind_the_headlines/Behind_the_Headlines_Category_Page">Medical practice</a></li>
+      
+      <li><a href="/pages/behind_the_headlines/Behind_the_Headlines_Category_Page">Diabetes</a></li>       
+  </ul>
 
-      <ul class="nhsuk-list nhsuk-list--border">                
-        <li>
-            <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Vegan diet 'helps people better manage type 2 diabetes'</a>
-            <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            31 October 2018
-            </p>
-        </li>
-    
-        <li>
-            <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">No proof walnuts prevent diabetes</a>
-            <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            2 July 2018
-            </p>
-        </li>
-    
-        <li>
-            <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Your toothpaste probably won't give you type 2 diabetes</a>
-            <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            22 June 2018
-            </p>
-        </li>
-    
-        <li>
-            <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Type 1 diabetes 'stabilises' after 7 years</a>
-            <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            11 June 2018
-            </p>
-        </li>
-    
-        <li>
-            <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Are there actually 5 types of diabetes?</a>
-            <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            2 March 2018
-            </p>
-        </li>
-    
-        <li>
-            <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Going vegan may help prevent diabetes in overweight people</a>
-            <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            15 February 2018
-            </p>
-        </li>
-    
-        <li>
-            <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Weight management may reduce the need for type 2 diabetes medication</a>
-            <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            12 January 2018
-            </p>
-        </li>
-    
-        <li>
-            <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">'Radical' low-calorie diet may help reverse type 2 diabetes</a>
-            <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            6 December 2017
-            </p>
-        </li>
-    
-        <li>
-            <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Some type 1 diabetes cases in adults misdiagnosed as type 2</a>
-            <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            1 December 2017
-            </p>
-        </li>
-    
-        <li>
-            <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Workplace bullying and violence 'risk factors' for type 2 diabetes</a>
-            <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            14 November 2017
-            </p>
-        </li>
-    
-        <li>
-            <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Vitamin D may help reduce type 1 diabetes risk in susceptible children</a>
-            <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            25 October 2017
-            </p>
-        </li>
-    
-        <li>
-            <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">People with type 2 diabetes should 'save carbs for last', study claims</a>
-            <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            2 October 2017
-            </p>
-        </li>
-    
-        <li>
-            <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">'More people need to know type 2 diabetes is reversible' argues report</a>
-            <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            14 September 2017
-            </p>
-        </li>
-    
-        <li>
-            <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Reports that frequent drinking prevents diabetes are inaccurate</a>
-            <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            28 July 2017
-            </p>
-        </li>
-    
-        <li>
-            <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Children's screen time linked to diabetes risk factors</a>
-            <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            14 March 2017
-            </p>
-        </li>
-    
-        <li>
-            <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Fasting diet may help regenerate a diabetic pancreas</a>
-            <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            24 February 2017
-            </p>
-        </li>
-    
-        <li>
-            <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Claim high-fat diets can prevent diabetes 'unproven'</a>
-            <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            12 December 2016
-            </p>
-        </li>
-    
-        <li>
-            <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Fat storage problems may increase diabetes risk </a>
-            <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            17 November 2016
-            </p>
-        </li>
-    
-        <li>
-            <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Sweetened drinks, including diet drinks, may raise diabetes risk </a>
-            <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            21 October 2016
-            </p>
-        </li>
-    
-        <li>
-            <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">A 10-minute walk after a meal 'good for diabetes'</a>
-            <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
-            18 October 2016
-            </p>
-        </li>
+{% endblock %} 
 
-      </ul>
+{% block content_two_thirds %}
 
-      {{ pagination({
-        "nextUrl": "/pages/behind_the_headlines/Behind_the_Headlines_Section_HomePage-2",
-        "nextPage": "Page 2 of 84"
-      }) }}
+<ul class="nhsuk-list nhsuk-list--border">                
+  <li>
+      <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Vegan diet 'helps people better manage type 2 diabetes'</a>
+      <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
+      31 October 2018
+      </p>
+  </li>
 
-    </div>  
+  <li>
+      <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">No proof walnuts prevent diabetes</a>
+      <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
+      2 July 2018
+      </p>
+  </li>
 
-  </div>
-{% endblock %}
+  <li>
+      <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Your toothpaste probably won't give you type 2 diabetes</a>
+      <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
+      22 June 2018
+      </p>
+  </li>
+
+  <li>
+      <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Type 1 diabetes 'stabilises' after 7 years</a>
+      <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
+      11 June 2018
+      </p>
+  </li>
+
+  <li>
+      <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Are there actually 5 types of diabetes?</a>
+      <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
+      2 March 2018
+      </p>
+  </li>
+
+  <li>
+      <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Going vegan may help prevent diabetes in overweight people</a>
+      <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
+      15 February 2018
+      </p>
+  </li>
+
+  <li>
+      <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Weight management may reduce the need for type 2 diabetes medication</a>
+      <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
+      12 January 2018
+      </p>
+  </li>
+
+  <li>
+      <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">'Radical' low-calorie diet may help reverse type 2 diabetes</a>
+      <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
+      6 December 2017
+      </p>
+  </li>
+
+  <li>
+      <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Some type 1 diabetes cases in adults misdiagnosed as type 2</a>
+      <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
+      1 December 2017
+      </p>
+  </li>
+
+  <li>
+      <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Workplace bullying and violence 'risk factors' for type 2 diabetes</a>
+      <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
+      14 November 2017
+      </p>
+  </li>
+
+  <li>
+      <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Vitamin D may help reduce type 1 diabetes risk in susceptible children</a>
+      <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
+      25 October 2017
+      </p>
+  </li>
+
+  <li>
+      <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">People with type 2 diabetes should 'save carbs for last', study claims</a>
+      <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
+      2 October 2017
+      </p>
+  </li>
+
+  <li>
+      <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">'More people need to know type 2 diabetes is reversible' argues report</a>
+      <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
+      14 September 2017
+      </p>
+  </li>
+
+  <li>
+      <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Reports that frequent drinking prevents diabetes are inaccurate</a>
+      <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
+      28 July 2017
+      </p>
+  </li>
+
+  <li>
+      <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Children's screen time linked to diabetes risk factors</a>
+      <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
+      14 March 2017
+      </p>
+  </li>
+
+  <li>
+      <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Fasting diet may help regenerate a diabetic pancreas</a>
+      <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
+      24 February 2017
+      </p>
+  </li>
+
+  <li>
+      <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Claim high-fat diets can prevent diabetes 'unproven'</a>
+      <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
+      12 December 2016
+      </p>
+  </li>
+
+  <li>
+      <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Fat storage problems may increase diabetes risk </a>
+      <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
+      17 November 2016
+      </p>
+  </li>
+
+  <li>
+      <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">Sweetened drinks, including diet drinks, may raise diabetes risk </a>
+      <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
+      21 October 2016
+      </p>
+  </li>
+
+  <li>
+      <a href="/pages/behind_the_headlines/Behind_the_Headlines_Page">A 10-minute walk after a meal 'good for diabetes'</a>
+      <p class="nhsuk-body-s nhsuk-u-margin-top-1 nhsuk-u-secondary-text-color">
+      18 October 2016
+      </p>
+  </li>
+
+  </ul>
+
+  {{ pagination({
+    "nextUrl": "/pages/behind_the_headlines/Behind_the_Headlines_Section_HomePage-2",
+    "nextPage": "Page 2 of 84"
+  }) }}
+
+{% endblock %} 
+
+
