--- a/app/views/pages/common_health_questions/CHQ_Section_HomePage__desktop.html
+++ b/app/views/pages/common_health_questions/CHQ_Section_HomePage__desktop.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/layout-nhsuk.html' %}
+{% extends 'layouts/layout-nhsuk-two-columns-right.html' %}
 
 {% block pageTitle %}
   CHQ_Section_HomePage__desktop
@@ -11,56 +11,49 @@
   }) }}
 {% endblock %}
 
-{% block content %}
-  <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-two-thirds">
+{% block content_page_heading %}
+  <h1>
+    Common health questions
+  </h1>
+{% endblock %}
 
-      <h1>
-        Common health questions
-      </h1>
+{% block content_two_thirds %}
+  <h2 class="nhsuk-heading-m">Select a topic:</h2>
 
-    </div>
-  </div>
+  <ul class="nhsuk-contents-list__list">
+      
+    <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/pages/common_health_questions/CHQ_Topic_Page__desktop">Accidents, first aid and treatments</a></li>
 
-  <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-two-thirds">
-       
-      <h2 class="nhsuk-heading-m">Select a topic:</h2>
+    <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/caring-carers-and-long-term-conditions/">Caring, carers and long-term conditions</a></li>
 
-      <ul class="nhsuk-contents-list__list">
-          
-        <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/pages/common_health_questions/CHQ_Topic_Page__desktop">Accidents, first aid and treatments</a></li>
-    
-        <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/caring-carers-and-long-term-conditions/">Caring, carers and long-term conditions</a></li>
-    
-        <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/childrens-health/">Children's health</a></li>
-    
-        <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/dental-health/">Dental health</a></li>
-    
-        <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/food-and-diet/">Food and diet</a></li>
-    
-        <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/infections/">Infections</a></li>
-    
-        <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/lifestyle/">Lifestyle</a></li>
-    
-        <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/medicines/">Medicines</a></li>
-    
-        <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/mens-health/">Men's health</a></li>
-    
-        <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/nhs-services-and-treatments/">NHS services and treatments</a></li>
-    
-        <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/operations-tests-and-procedures/">Operations, tests and procedures</a></li>
-    
-        <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/pages/common_health_questions/CHQ_Topic_Page__desktop">Pregnancy</a></li>
-    
-        <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/sexual-health/">Sexual health</a></li>
-    
-        <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/travel-health/">Travel health</a></li>
-    
-        <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/womens-health/">Women's health</a></li>
-    
-    </ul>
-  </div>  
+    <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/childrens-health/">Children's health</a></li>
 
-  </div>
+    <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/dental-health/">Dental health</a></li>
+
+    <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/food-and-diet/">Food and diet</a></li>
+
+    <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/infections/">Infections</a></li>
+
+    <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/lifestyle/">Lifestyle</a></li>
+
+    <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/medicines/">Medicines</a></li>
+
+    <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/mens-health/">Men's health</a></li>
+
+    <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/nhs-services-and-treatments/">NHS services and treatments</a></li>
+
+    <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/operations-tests-and-procedures/">Operations, tests and procedures</a></li>
+
+    <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/pages/common_health_questions/CHQ_Topic_Page__desktop">Pregnancy</a></li>
+
+    <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/sexual-health/">Sexual health</a></li>
+
+    <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/travel-health/">Travel health</a></li>
+
+    <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/womens-health/">Women's health</a></li>
+
+  </ul>
+{% endblock %}
+
+{% block content_one_third %}
 {% endblock %}
