--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,7 +27,7 @@
 
       <h2>Wagtail pages</h2>
 
-      <h3>Behind the headlines</h3>
+      <h3 class="nhsuk-heading-xs">Behind the headlines</h3>
 
       <ul>
         <li>
@@ -41,7 +41,7 @@
         </li>
       </ul>
 
-      <h3>Common health questions</h3>
+      <h3 class="nhsuk-heading-xs">Common health questions</h3>
       
       <ul>
         <li>
@@ -52,6 +52,26 @@
         </li>
         <li>
           <a href="/pages/common_health_questions/CHQ_Question_Page__desktop">CHQ_Question_Page__desktop</a>
+        </li>
+      </ul>
+
+      <h3 class="nhsuk-heading-xs">Conditions</h3>
+      
+      <ul>
+        <li>
+          <a href="/pages/conditions/Condition_Page__desktop">Condition_Page__desktop</a>
+        </li>
+        <li>
+          <a href="/pages/conditions/Condition_Page_Section__desktop">Condition_Page_Section__desktop</a>
+        </li>
+        <li>
+          <a href="/pages/conditions/conditions_article_page__desktop">conditions_article_page__desktop</a>
+        </li>
+        <li>
+          <a href="/pages/conditions/conditions_curated_hub_page__desktop">conditions_curated_hub_page__desktop</a>
+        </li>
+        <li>
+          <a href="/pages/conditions/Conditions_Section_HomePage__desktop">Conditions_Section_HomePage__desktop</a>
         </li>
       </ul>
 
