Added conditions page and removed '__desktop' from naming

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -45,13 +45,13 @@
       
       <ul>
         <li>
-          <a href="/pages/common_health_questions/CHQ_Section_HomePage__desktop">CHQ_Section_HomePage__desktop</a>
+          <a href="/pages/common_health_questions/CHQ_Section_HomePage">CHQ_Section_HomePage</a>
         </li>
         <li>
-          <a href="/pages/common_health_questions/CHQ_Topic_Page__desktop">CHQ_Topic_Page__desktop</a>
+          <a href="/pages/common_health_questions/CHQ_Topic_Page">CHQ_Topic_Page</a>
         </li>
         <li>
-          <a href="/pages/common_health_questions/CHQ_Question_Page__desktop">CHQ_Question_Page__desktop</a>
+          <a href="/pages/common_health_questions/CHQ_Question_Page">CHQ_Question_Page</a>
         </li>
       </ul>
 
@@ -59,19 +59,19 @@
       
       <ul>
         <li>
-          <a href="/pages/conditions/Condition_Page__desktop">Condition_Page__desktop</a>
+          <a href="/pages/conditions/Condition_Page">Condition_Page</a>
         </li>
         <li>
-          <a href="/pages/conditions/Condition_Page_Section__desktop">Condition_Page_Section__desktop</a>
+          <a href="/pages/conditions/Condition_Page_Section">Condition_Page_Section</a>
         </li>
         <li>
-          <a href="/pages/conditions/conditions_article_page__desktop">conditions_article_page__desktop</a>
+          <a href="/pages/conditions/conditions_article_page">conditions_article_page</a>
         </li>
         <li>
-          <a href="/pages/conditions/conditions_curated_hub_page__desktop">conditions_curated_hub_page__desktop</a>
+          <a href="/pages/conditions/conditions_curated_hub_page">conditions_curated_hub_page</a>
         </li>
         <li>
-          <a href="/pages/conditions/Conditions_Section_HomePage__desktop">Conditions_Section_HomePage__desktop</a>
+          <a href="/pages/conditions/Conditions_Section_HomePage">Conditions_Section_HomePage</a>
         </li>
       </ul>
 
