--- a/app/views/pages/common_health_questions/CHQ_Question_Page.html
+++ b/app/views/pages/common_health_questions/CHQ_Question_Page.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/layout-nhsuk-two-columns-right.html' %}
 
 {% block pageTitle %}
-  CHQ_Question_Page__desktop
+  CHQ_Question_Page
 {% endblock %}
 
 {% block beforeContent %}
@@ -12,11 +12,11 @@
         text: "Home"
       },
       {
-        href: "/pages/common_health_questions/CHQ_Section_HomePage__desktop",
+        href: "/pages/common_health_questions/CHQ_Section_HomePage",
         text: "Common health questions"
       }
     ],
-    href: "/pages/common_health_questions/CHQ_Topic_Page__desktop",
+    href: "/pages/common_health_questions/CHQ_Topic_Page",
     text: "Pregnancy"
   }) }}
 {% endblock %}
@@ -76,7 +76,7 @@
   </section>
 
   {{ backLink({
-    "href": "/pages/common_health_questions/CHQ_Topic_Page__desktop",
+    "href": "/pages/common_health_questions/CHQ_Topic_Page",
     "text": "Back to Pregnancy"
   }) }}
 
