--- a/app/views/pages/common_health_questions/CHQ_Topic_Page.html
+++ b/app/views/pages/common_health_questions/CHQ_Topic_Page.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/layout-nhsuk-two-columns-right.html' %}
 
 {% block pageTitle %}
-  CHQ_Topic_Page__desktop
+  CHQ_Topic_Page
 {% endblock %}
 
 {% block beforeContent %}
@@ -12,7 +12,7 @@
         text: "Home"
       }
     ],
-    href: "/pages/common_health_questions/CHQ_Section_HomePage__desktop",
+    href: "/pages/common_health_questions/CHQ_Section_HomePage",
     text: "Common health questions"
   }) }}
 {% endblock %}
@@ -27,7 +27,7 @@
 
   <ul class="nhsuk-list">
             
-    <li><a href="/pages/common_health_questions/CHQ_Question_Page__desktop">What is preconception care?</a></li>
+    <li><a href="/pages/common_health_questions/CHQ_Question_Page">What is preconception care?</a></li>
 
     <li><a href="/common-health-questions/pregnancy/how-can-i-increase-my-chances-of-getting-pregnant/">How can I increase my chances of getting pregnant?</a></li>
 
@@ -160,7 +160,7 @@
   </ul>
 
   {{ backLink({
-    "href": "/pages/common_health_questions/CHQ_Section_HomePage__desktop",
+    "href": "/pages/common_health_questions/CHQ_Section_HomePage",
     "text": "Back to Topics"
   }) }}
 
