--- a/app/views/pages/common_health_questions/CHQ_Section_HomePage.html
+++ b/app/views/pages/common_health_questions/CHQ_Section_HomePage.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/layout-nhsuk-two-columns-right.html' %}
 
 {% block pageTitle %}
-  CHQ_Section_HomePage__desktop
+  CHQ_Section_HomePage
 {% endblock %}
 
 {% block beforeContent %}
@@ -22,7 +22,7 @@
 
   <ul class="nhsuk-contents-list__list">
       
-    <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/pages/common_health_questions/CHQ_Topic_Page__desktop">Accidents, first aid and treatments</a></li>
+    <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/pages/common_health_questions/CHQ_Topic_Page">Accidents, first aid and treatments</a></li>
 
     <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/caring-carers-and-long-term-conditions/">Caring, carers and long-term conditions</a></li>
 
@@ -44,7 +44,7 @@
 
     <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/operations-tests-and-procedures/">Operations, tests and procedures</a></li>
 
-    <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/pages/common_health_questions/CHQ_Topic_Page__desktop">Pregnancy</a></li>
+    <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/pages/common_health_questions/CHQ_Topic_Page">Pregnancy</a></li>
 
     <li class="nhsuk-contents-list__item">       <a class="nhsuk-contents-list__link" href="/common-health-questions/sexual-health/">Sexual health</a></li>
 
