--- a/app/views/layouts/layout-nhsuk-full-width.html
+++ b/app/views/layouts/layout-nhsuk-full-width.html
@@ -1,8 +1,25 @@
 {% extends 'layouts/layout-nhsuk.html' %}
 
 {% block content %}
+
+<div class="nhsuk-grid-row">
+    <div class="nhsuk-grid-column-two-thirds">
+
+      {% block content_page_heading %}
+      
+        <div class="layout-example">
+
+          Two thirds (page heading)
+          
+        </div>
+      
+      {% endblock %}
+
+    </div>
+  </div>
+
   <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-full-width">
+    <div class="nhsuk-grid-column-full">
 
       {% block content_full_width %}
 
