--- a/app/views/layouts/layout-nhsuk-full-width.html
+++ b/app/views/layouts/layout-nhsuk-full-width.html
@@ -9,7 +9,9 @@
       
         <div class="layout-example">
 
-          Two thirds (page heading)
+          <h1>Full width page layout</h1>
+
+          <p class="nhsuk-lede-text">Two thirds column (for page heading and lede text)</p>
           
         </div>
       
@@ -25,7 +27,7 @@
 
         <div class="layout-example">
 
-          Full width
+          Full width column (for page content)
 
         </div>
       
