--- a/app/views/layouts/layout-nhsuk-two-columns-left.html
+++ b/app/views/layouts/layout-nhsuk-two-columns-left.html
@@ -8,7 +8,9 @@
       
         <div class="layout-example">
 
-          Two thirds (page heading)
+          <h1>Two column left page layout</h1>
+
+          <p class="nhsuk-lede-text">Two thirds column (for page heading and lede text)</p>
           
         </div>
       
@@ -24,7 +26,7 @@
       
         <div class="layout-example">
 
-          One third
+          One third column (for filters etc)
           
         </div>
         
@@ -39,7 +41,7 @@
         
           <div class="layout-example">
 
-            Two thirds
+            Two thirds column (for page content)
             
           </div>
           
