--- a/app/views/layouts/layout-nhsuk-two-columns-right.html
+++ b/app/views/layouts/layout-nhsuk-two-columns-right.html
@@ -8,7 +8,9 @@
       
         <div class="layout-example">
 
-          Two thirds (page heading)
+          <h1>Two column right page layout</h1>
+
+          <p class="nhsuk-lede-text">Two thirds column (for page heading and lede text)</p>
           
         </div>
         
@@ -25,7 +27,7 @@
         
           <div class="layout-example">
 
-            Two thirds
+            Two thirds column (for page content)
             
           </div>
           
@@ -40,7 +42,7 @@
       
         <div class="layout-example">
 
-          One third
+          One third column (for sec. nav)
           
         </div>
         
